feat: add configuration validation Gradle plugin
Introduce the io.micronaut.configuration.validation plugin to validate Micronaut configuration against JSON schemas during run, test, and assemble/check/build.

Includes cacheable report tasks, functional tests + sample, and scenario-specific validator classpaths extending runtimeClasspath/testRuntimeClasspath.